Somewhat working console, I don't really need all the things I have implemented, but it was just to test the console, but we have a somewhat working gui_main method, so people could use it for inspiration ig. Good luck to the rest, I will continue improving this later.

--- a/Milestone_2/CMakeLists.txt
+++ b/Milestone_2/CMakeLists.txt
@@ -1,49 +1,66 @@
 cmake_minimum_required(VERSION 3.10)
 project(OS_Simulator C)
 
-# Set C standard
 set(CMAKE_C_STANDARD 99)
 
-# Find GTK4 for the GUI executable
+# Find PkgConfig
 find_package(PkgConfig REQUIRED)
+
+# Find GTK4 using PkgConfig
+# This will populate GTK4_FOUND, GTK4_INCLUDE_DIRS, GTK4_LIBRARIES, GTK4_CFLAGS, etc.
 pkg_check_modules(GTK4 REQUIRED gtk4)
 
-# Print GTK4 configuration for debugging
-message("GTK4_INCLUDE_DIRS: ${GTK4_INCLUDE_DIRS}")
-message("GTK4_LIBRARIES: ${GTK4_LIBRARIES}")
-message("GTK4_LIBRARY_DIRS: ${GTK4_LIBRARY_DIRS}")
-message("GTK4_CFLAGS_OTHER: ${GTK4_CFLAGS_OTHER}")
+# Verify that pkg_check_modules successfully found GTK4
+if (NOT GTK4_FOUND)
+    message(FATAL_ERROR "Could not find GTK4 using pkg-config.")
+endif()
 
-# Include directories for both simulator and GUI
-include_directories(
-    include
-    src
-    src/views
-    ${GTK4_INCLUDE_DIRS}
+# (Optional but good practice) Print the found variables for debugging
+message(STATUS "GTK4 found:")
+message(STATUS "  Include Dirs: ${GTK4_INCLUDE_DIRS}")
+message(STATUS "  Libraries: ${GTK4_LIBRARIES}")
+message(STATUS "  C Flags: ${GTK4_CFLAGS}") # Includes -I flags and other necessary compiler options
+
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+
+set(SRC_FILES
+    src/FCFS.c
+    src/MLFQ.c
+    src/PCB.c
+    src/Queue.c
+    src/RoundRobin.c
+    src/index.c
+    src/instruction.c
+    src/memory.c
+    src/memory_manager.c
+    src/mutex.c
+    src/parser.c
+    src/process.c
+    src/views/console_view.c
+    src/views/gui_globals.c
 )
 
-# Link directories for GTK4
-link_directories(${GTK4_LIBRARY_DIRS})
+set(GUI_MAIN src/gui_main.c)
 
-# Add GTK4-specific compiler flags
-add_definitions(${GTK4_CFLAGS_OTHER})
+# Add the executable target
+add_executable(gui_simulator ${GUI_MAIN} ${SRC_FILES})
 
-# Collect all .c files from src/ for the simulator, excluding GUI-related files
-file(GLOB SIMULATOR_SRC_FILES 
-    src/*.c
+# Add include directories for your project's headers and GTK4's headers
+# Use target_include_directories for better practice
+target_include_directories(gui_simulator PRIVATE
+    ${CMAKE_SOURCE_DIR}/include
+    # Consider if src and src/views really need to be in the include path for headers
+    # ${CMAKE_SOURCE_DIR}/src
+    # ${CMAKE_SOURCE_DIR}/src/views
+    ${GTK4_INCLUDE_DIRS} # <-- Use the variable from pkg_check_modules: GTK4_INCLUDE_DIRS
 )
 
-# Exclude GUI files (src/views/*.c) from simulator build
-list(FILTER SIMULATOR_SRC_FILES EXCLUDE REGEX "src/views/.*")
+# Add compiler options provided by pkg-config (like -mfpmath=sse, etc.)
+target_compile_options(gui_simulator PRIVATE ${GTK4_CFLAGS})
 
-# Add the simulator executable (backend only)
-add_executable(simulator ${SIMULATOR_SRC_FILES})
-
-# Collect all GUI source files from src/views/
-file(GLOB GUI_SRC_FILES src/views/*.c)
-
-# Add the GTK4 test executable (GUI)
-add_executable(gtk4-test ${GUI_SRC_FILES})
-
-# Link GTK4 libraries to the GUI executable
-target_link_libraries(gtk4-test ${GTK4_LIBRARIES})
+# Link against GTK4 libraries and Threads
+target_link_libraries(gui_simulator PRIVATE
+    ${GTK4_LIBRARIES} # <-- Use the variable from pkg_check_modules: GTK4_LIBRARIES
+    Threads::Threads
+)
